# vue-cloud-functions

./: README.md  pyproject.toml  requirements.txt
cloud_functions/hello_world/: main.py
vue-cloud-functions/: README.md  index.html  package-lock.json  package.json
