[tool.poetry]
name = "vue-cloud-functions"
version = "0.1.0"
description = ""
authors = ["eryeden <ery.eden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-storage = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
